# versor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Notes.md  README.md  androidbuild.sh  build.sh  buildAll.sh  libraryNotes.md  run.sh  style0.css  uninstall.sh
.circleci/: config.yml
copyrights/: COPYING.GPL  COPYRIGHT
doc/: Doxyfile  INSTALL.md  bibtex.txt  guide.md  libraryNotes.md  mainpage.md
examples/: xAlgebra.cpp  xBasic.cpp  xBoost.cpp  xChain.cpp  xDipole.cpp  xDistance.cpp  xEGA.cpp  xEmpty.cpp  xEmpty2D.cpp  xEmptyProject.cpp  xFabrikChain.cpp  xFabrikChainConstrained.cpp  xField.cpp  xFrame.cpp  xKnot.cpp  xMeet.cpp  xMotor.cpp  xNonEuclidean.cpp  xPointPair.cpp  xPointToCircle.cpp  xReflect.cpp  xRobotArm.cpp  xRoot.cpp  xRoots.cpp  xTetra.cpp  xTopos.cpp  xTorusKnot.cpp  xWatt.cpp
lua/: C2.lua  C3.lua  R3.lua  cuda.lua  grammar.lua  hypercode.glsl  routines.lua  scratch.lua  scratch2.lua  shader.lua  shaderfuncs.lua  shadergen.lua  shadergrammar.lua  versor.lua  versor_fix.lua
old_build_system/: Makefile  Makefile.pi
pi/: Makefile
scratch/: CMakeLists.txt  fileguide.md  xIntro.cpp
scratch/agents/: xBots.cpp
scratch/basics/: xGimbal.cpp  xHyperbolic.cpp  xIntersections.cpp  xMeet.cpp  xProperties.cpp  xTangency.cpp
scratch/boosts/: xBoost2D.cpp  xBoostGen.cpp  xCircleBlending.cpp  xElectret.cpp  xFieldSphere.cpp  xFlow.cpp  xHopf.cpp  xKnot.cpp  xKnotNoDraw.cpp  xKnottedAround2.cpp  xLog.cpp  xOrbits.cpp  xTransforms.cpp
scratch/fields/: xDifferential2.cpp  xScalar.cpp  xTangent4.cpp  xWavePropagation.cpp  xWavePropagationFixed.cpp
scratch/folds/: xCurvedCrease.cpp  xCylinder2.cpp  xHexagon.cpp  xHexagrid.cpp  xHypar.cpp  xMiuriOri2.cpp  xMiuriOri3.cpp  xMiuriOri5.cpp  xPetalFold.cpp  xReverseFold.cpp  xRigid.cpp
scratch/frames/: xReciprocal.cpp
scratch/games/: rollball.cpp
scratch/geo/: xCSG.cpp  xConic.cpp  xVoronoi.cpp
scratch/graphics/: xAmbientOcclusion.cpp  xMotionBlur.cpp
scratch/groups/: xGroup.cpp  xPointGroup3D.cpp  xSimplex.cpp  xSpaceGroup2D.cpp
scratch/io/: xMeshImport.cpp
scratch/kinematics/: xBennett.cpp  xBricard.cpp  xCollisions.cpp  xCompoundTest.cpp  xCylinder.cpp  xLowerPairs.cpp  xWatt.cpp  xWatt2.cpp
scratch/projects/: xIntro.cpp
scratch/projects/agents/: xAgents_control.cpp  xBots.cpp  xJellies.cpp
scratch/projects/basics/: xCGA2d_ops.cpp  xCga2D.cpp  xConstructions.cpp  xDiscCollision.cpp  xEga3d.cpp  xOrthogonalSpheres.cpp  xPlunge.cpp  xProjection.cpp  xReciprocalFrames.cpp  xRotation.cpp  xStereoTest.cpp  xTangency.cpp  xTest.cpp  xTransformations.cpp
scratch/projects/boosts/: xAnapole.cpp  xBoost2D.cpp  xBoostExperiments.cpp  xBoostProgress.cpp  xCircleBlending.cpp  xCircleNet.cpp  xCircleNet2.cpp  xCircleNet3.cpp  xCircleNet4.cpp  xCircleNet5.cpp  xCircleNetGeneric.cpp  xConformalDeformation.cpp  xConformalVersusTwist.cpp  xCoordSurf.cpp  xCoupledKnot.cpp  xCurve.cpp  xCyclideFrame.cpp  xCyclideFrame2.cpp  xCyclidicMap.cpp  xCyclidicNet0.cpp  xCyclidicVolumes.cpp  xCyclidicVolumes2.cpp  xElectret0.cpp  xFieldSphere.cpp  xFlow.cpp  xFrameKnot.cpp  xHopf.cpp  xHopfKnot.cpp  xInverseMapping.cpp  xKnot.cpp  xKnotDebug.cpp  xKnotMesh.cpp  xKnotNoDraw.cpp  xKnotRotor.cpp  xKnotted.cpp  xKnottedAround.cpp  xKnottedAround2.cpp  xKnottedCurve.cpp  xLog.cpp  xLog2Log.cpp  (+12 more)
scratch/projects/boosts/old/: xBoostGen.cpp  xBoostProgress.cpp
scratch/projects/fields/: xCurl.cpp  xDifferential.cpp  xDifferential2.cpp  xDifferential3.cpp  xDipole.cpp  xElectret.cpp  xFieldtest.cpp  xGradient.cpp  xScalar.cpp  xTangent.cpp  xTangent2.cpp  xTwistField.cpp  xTwistFieldCrystal.cpp
scratch/projects/folds/: xAxioms.cpp  xConicFolds.cpp  xCrimp.cpp  xCurvedCrease.cpp  xCurvedCrease2.cpp  xCylinder.cpp  xCylinder2.cpp  xFabrikForFolding.cpp  xFold.cpp  xFoldAndCut.cpp  xFoldMolecules.cpp  xFolding.cpp  xHexagon.cpp  xHypar.cpp  xMiuriOri.cpp  xMiuriOri2.cpp  xMiuriOri4.cpp  xMiuriOri5.cpp  xMiuriOri6.cpp  xMolecule.cpp  xPetalFold.cpp  xPreliminaryFold.cpp  xRabbitEar.cpp  xRadial.cpp  xReverseFold.cpp  xRig3.cpp  xRigid.cpp  xSpaceCurve.cpp  xTrisector.cpp  xTruss.cpp  xUniversal_00.cpp  xWaterbomb.cpp  xWaterbomb0.cpp
scratch/projects/frames/: xControl.cpp  xLinkages.cpp  xNormals.cpp  xOrient.cpp  xRecipSimplex.cpp  xReciprocal.cpp  xReciprocalCircle.cpp  xReciprocalSphere.cpp  xSpacetime.cpp  xTwist.cpp
scratch/projects/games/: rollball.cpp  xInterface.cpp
scratch/projects/geo/: xBary.cpp  xCSG.cpp  xConformalCoord.cpp  xConic.cpp  xConicCam.cpp  xConicCurves.cpp  xConvex.cpp  xDarboux.cpp  xHyperbolic.cpp  xLaplaceBeltrami.cpp
scratch/projects/groups/: xNet.cpp  xPoints3D.cpp  xRoots.cpp  xSpaceGroup2D.cpp  xSpaceGroup3D.cpp  xSpaceGroup3D_Operations.cpp  xSpaceGroup3D_v02.cpp  xSphericalTrig.cpp  xTensegrity.cpp
scratch/projects/groups/fixme/: xGroup.cpp  xHomogenous4d.cpp  xLattice.cpp  xSimplexCoordinate.cpp
scratch/projects/inversions/: xConicInversion.cpp  xReflectionSurfaces2D.cpp
scratch/projects/io/: xMeshImport.cpp  xRenderToFile.cpp
scratch/projects/kinematics/: xBennett.cpp  xBennettVariation.cpp  xBricard.cpp  xChainDemo.cpp  xCompoundTest.cpp  xConstrainedFabrik.cpp  xConstrainedRotation.cpp  xCoupledMotors.cpp  xCrimp2.cpp  xDHParam.cpp  xDualLineTwists.cpp  xFabrik.cpp  xLegs.cpp  xMotorReflection.cpp  xParabolicDish.cpp  xParameters.cpp  xRR.cpp  xRotorRatio.cpp  xSTRobotics.cpp  xWatt2.cpp  xWrap.cpp
scratch/projects/mesh/: xMesh.cpp  xSkin.cpp
scratch/projects/old/: xUniversal.cpp
scratch/projects/templates/: xBlades.cpp  xSpaceTime.cpp
scratch/projects/util/: xBasisTests.cpp  xBlades0.cpp  xCga2DScratch.cpp  xCommand.cpp  xConformal.cpp  xConstructionScratch.cpp  xEuclidean.cpp  xGeneric.cpp  xGfx.cpp  xLimits.cpp  xMVtest.cpp  xMaps.cpp  xPrint.cpp  xRuntime.cpp  xScratch.cpp  xSpaceTimeAlgebra.cpp  xUDL.cpp  xUsing.cpp  xVBO.cpp  xcga2d.cpp  xcga3d.cpp
scratch/util/: xBacktrace.cpp  xBasis.cpp  xBasisRedux.cpp  xCompile.cpp  xConformal.cpp  xEGA.cpp  xQuadric.cpp  xR2Tex.cpp
scripts/: ppm2jpg.sh  process.sh  style.css
tests/: Common.h  (+29 more)
(+379 files in other folders)
